samples/_failures_safe/1761129074_ea1aa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40cd6d0c.c: In function ‘main’:
./samples/SAFE/__tmp_40cd6d0c.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_40cd6d0c.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40cd6d0c.c:152:17: error: expected declaration or statement at end of input
